    - Fixed a bug where API reseponses from Curseforge with no "gameflavor" specification were causing failed update checking
    - Updated the DataCollectionException and Log functionality to properly present all relevant information in case of exceptions

v1.00
    - Fixed issue with manual install location selection
    - Made the program check for existing Java installations of version 8 or higher

v0.99
    - Overhauled UI totally
    - You can now search for Tukui, WowInterface, and Curse addons in the same view
    - Added extra settings, such as scrolling to bottom of list when updating and auto-searching for updates on launch
    - You can now update addons individually, simply check for updates and each one with an update will show a button
    - Hopefully fixed the bug with setting up installation folders on another drive

v0.9
    - Added support for Retail and PTR for both versions of the game, with ability  to easily expand to TBC or any other versions of the game if/when they launch
    - Added ability to scan for wow Installations
    - Added relevant UI for scanning
    - Added dropdown in main UI to switch between managed versions
    - Changed WowInterface to be searchable via API
    - Updated UI to reflect
    - Added Simple cache system (only used by WowInteface at the moment)
    - Random cleanup

v0.81
    - Added a feature to toggle forcing re-downloads. When this is enabled updating addons will force them to redownload regardless of whether you have the most up-to-date version. Useful if an addon got uninstalled but you still have the timestamp.
    - Renamed the force updates toggle to force updates checking to better reflect its function. It ignores the built-in 30 min internal cooldown each addon has for checking for new updates.

v0.80